ci: build landing page

--- a/index.html
+++ b/index.html
@@ -10,18 +10,167 @@
   </head>
   <body>
     <header>
-      <a class="back">Go back</a>
+      <h2 class="hack-tag">InclusiveCodeFest 2023</h2>
+      <p class="hack-theme">
+        Harnessing Digital Technologies for Job Creation, Inclusive Economic
+        Growth and Sustainability
+      </p>
     </header>
-    <h1>HACKATHON REGISTRATION</h1>
-    <h2 class="extra-info">
-      Fields marked with an <span class="asterik">*</span> are required.
-    </h2>
-    <h2 class="extra-info">
-      If you would like to take part in our event, please fill in your details
-      in this Event Registration Form below and you will be automatically
-      registered.
-    </h2>
-    <div class="container">
+    <section class="card-container">
+      <div class="black-card">
+        <span>Oct 25-28 </span>
+        <p>2023</p>
+      </div>
+      <div class="black-card">
+        <p>72</p>
+        <span>hours</span>
+      </div>
+      <div class="black-card">
+        <p>Onsite in</p>
+        <span>Abuja</span>
+      </div>
+      <div class="black-card">
+        <p>200+</p>
+        <span>Hackers</span>
+      </div>
+    </section>
+    <section class="about-hack">
+      <div class="container">
+        <h2>InclusiveCodeFest 2023 is here!</h2>
+        <h3>
+          InclusiveCodeFest 2023 is here! InclusiveCodeFest hackathon is the
+          meeting place for like-minded developers, designers, and business
+          professionals eager to explore new paths.
+        </h3>
+        <div class="info">
+          <p>
+            InclusiveCodeFest hackathon is one of the best in Europe. It's a
+            weekend-long experience, gathering tech enthusiasts from all over
+            Europe in Latvia to develop new ideas with the latest technology in
+            a unique environment and atmosphere.
+          </p>
+          <p>
+            If you're into tech at all, this is the place to be - a full weekend
+            of hacking and catching up with more than 200 other tech heads in an
+            atmosphere and spirit like no other.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="hack-schedule container">
+      <h2>Schedule</h2>
+      <div class="schedule-container">
+        <div class="date">
+          <h3>Oct 25</h3>
+          <p>Wednesday</p>
+          <ul>
+            <li>10:00 Registration</li>
+            <li>11:00 Matchmaking</li>
+            <li>12:00 Official Opening</li>
+            <li>14:00 Lunch</li>
+            <li>15:30 Challenge Mentors available</li>
+            <li>20:00 Dinner</li>
+            <li>21:00 Hackers Chill & Drinks Night</li>
+          </ul>
+        </div>
+        <div class="date">
+          <h3>Oct 26</h3>
+          <p>Thursday</p>
+          <ul>
+            <li>9:00 Breakfast</li>
+            <li>10:00 QnA with HackCodeX team</li>
+            <li>14:00 Lunch</li>
+            <li>15:30 Challenge Mentors available</li>
+            <li>20:00 Dinner</li>
+            <li>21:00 Evening activity</li>
+          </ul>
+        </div>
+        <div class="date">
+          <h3>Oct 27</h3>
+          <p>Friday</p>
+          <ul>
+            <li>8:30 Breakfast</li>
+            <li>10:00 Final submissions</li>
+            <li>10:00 HackCodeX Forum</li>
+            <li>13:00 Track Winner announcement</li>
+            <li>13:30 Lunch</li>
+            <li>15:00 Job fair</li>
+            <li>18:30 Closing & Awards ceremony</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="hack-challenges">
+      <div class="container">
+        <h2 class="title">Challenges</h2>
+        <h3>
+          The InclusiveCodeFest is divided into
+          <span>tracks based on different industries</span> and topics that are
+          currently particularly relevant.
+        </h3>
+        <div class="challenges-container">
+          <div class="challenge">
+            <img src="./images/promotion.png" alt="Digital" />
+            <h2>Digital Literacy & Inclusion</h2>
+            <p>
+              Address digital inclusion challenges related to politics,
+              economics, policies, and online safety.
+            </p>
+          </div>
+          <div class="challenge">
+            <img src="./images/social-campaign.png" alt="Media" />
+            <h2>Creative Media Technology</h2>
+            <p>
+              Explore issues like data control, intellectual property, content
+              sharing, and universal content formats in creative media tech.
+            </p>
+          </div>
+          <div class="challenge">
+            <img src="./images/government.png" alt="Government" />
+            <h2>Government Services</h2>
+            <p>
+              Enhance democratic governance, simplify tax filing for small
+              businesses, and boost citizen and community engagement.
+            </p>
+          </div>
+          <div class="challenge">
+            <img src="./images/subsidy.png" alt="Subsidy" />
+            <h2>Subsidy Removal/Mobility</h2>
+            <p>
+              Find solutions to mitigate the impact of fuel subsidy removal on
+              transportation, production, and mobility.
+            </p>
+          </div>
+          <div class="challenge">
+            <img src="./images/finance.png" alt="finance" />
+            <h2>Financial Inclusion Technology</h2>
+            <p>
+              Improve data security, regulatory compliance, infrastructure, and
+              financial inclusion technology in rural areas.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="register">
+      <h2>Register for InclusiveCodeFest hackathon 2023 now</h2>
+      <p>
+        Click here to Pre-register now and we’ll contact you with more details
+        when it’s time to complete your registration
+      </p>
+      <button class="register">Register Now</button>
+    </section>
+
+    <form class="container form-container">
+      <h1 class="form-heading">HACKATHON REGISTRATION</h1>
+      <h2 class="extra-info">
+        Fields marked with an <span class="asterik">*</span> are required.
+      </h2>
+      <h2 class="extra-info">
+        If you would like to take part in our event, please fill in your details
+        in this Event Registration Form below and you will be automatically
+        registered.
+      </h2>
       <section class="personal-info">
         <h2 class="section-heading">Personal Information</h2>
         <div class="input-section">
@@ -122,6 +271,8 @@
           </div>
         </div>
       </section>
-    </div>
+      <button class="submit">Submit</button>
+    </form>
+    <div class="overlay"></div>
   </body>
 </html>
