ci: add cta to header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         Harnessing Digital Technologies for Job Creation, Inclusive Economic
         Growth and Sustainability
       </p>
+      <button class="register-btn">Register Now</button>
     </header>
     <section class="card-container">
       <div class="black-card">
@@ -158,7 +159,7 @@
         Click here to Pre-register now and we’ll contact you with more details
         when it’s time to complete your registration
       </p>
-      <button class="register">Register Now</button>
+      <button class="register-btn">Register Now</button>
     </section>
 
     <form class="container form-container">
